# washflow-saas

./: .env  .gitignore  BUILD_GUIDE.md  LICENSE.txt  capacitor.config.ts  check.mjs  electron-builder.yml  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
.lovable/: plan.md
electron/: main.cjs  preload.cjs
public/: manifest.webmanifest
scripts/: audit-permissions.mjs
src/: App.css  App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  Info.plist  Info.plist.json  commands.rs  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  database.rs  immersive.rs  lib.rs  sync.rs  tray.rs
src/components/: ActivityLogsSection.tsx  AndroidUpdateDialog.tsx  AttendancePage.tsx  BillingSection.tsx  CameraCapture.tsx  ComingSoon.tsx  CompleteWashDialog.tsx  DashboardOverview.tsx  DashboardStats.tsx  DiscountAuthorizeDialog.tsx  EditOrderDialog.tsx  EmployeeExpenseDialog.tsx  ExpensesPage.tsx  HeaderClock.tsx  HistoryPage.tsx  IdleWarningDialog.tsx  InventoryItemDetailsModal.tsx  InventoryPage.tsx  InventoryTrendsPanel.tsx  LicenseEventsAdmin.tsx  LicenseGate.tsx  LiveKPIDashboard.tsx  LoyaltyDashboard.tsx  MembershipAuditLog.tsx  MobileBottomNav.tsx  NewOrderDialog.tsx  OfflineBanner.tsx  OrderDetailsModal.tsx  PrintReceiptButton.tsx  ProfileDialog.tsx  QuickActionsPanel.tsx  ReceiptPreview.tsx  ReceiptPreviewDialog.tsx  ReorderDialog.tsx  (+19 more)
supabase/: config.toml
(+189 files in other folders)
