[package]
name = "washflow"
version = "1.0.26"
description = "Washflow Car Wash Management System"
authors = ["Aumsoft Technology (Pty) Ltd"]
license = "MIT"
repository = "https://github.com/BebbaApp/washflow-saas"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
open = "5"
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
rusqlite = { version = "0.31", features = ["bundled"] }  # bundled = SQLite compiled in, no install needed
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
anyhow = "1"
thiserror = "1"
once_cell = "1"
tauri-plugin-updater = "2.10.1"
sha2 = "0.10"
futures-util = "0.3"


[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
